# ros2

./: .gitignore  build.sh  launch.sh  launch_web.sh  run_all_sky.sh  run_bgs.sh
.devcontainer/: Dockerfile  devcontainer.json
src/all_sky_publisher/: CMakeLists.txt  package.xml
src/all_sky_publisher/msg/: ImageWithInfo.msg
src/all_sky_publisher/src/: main.cpp
src/background_subtractor/: CMakeLists.txt  package.xml
src/frame_provider/: CMakeLists.txt  package.xml
src/frame_provider/src/: main.cpp
src/launch/: launch.py
src/sky360_camera/: CMakeLists.txt
src/sky360_camera/msg/: BayerFormat.msg  BayerImage.msg  CameraInfo.msg  ImageInfo.msg
src/sky360_camera/src/: all_sky_publisher.cpp  web_camera_publisher.cpp
src/sky360_image_processing/: CMakeLists.txt  package.xml
src/sky360_image_processing/src/: background_subtractor.cpp  bgs_detector.cpp  frame_provider.cpp
src/sky360_interfaces/: CMakeLists.txt
src/sky360_interfaces/msg/: TrackDetectionArray.msg
src/sky360_launch/: package.xml  setup.py
src/sky360_launch/launch/: launch.py  video_launch.py  web_launch.py
src/sky360_shared/include/: parameter_node.hpp
src/sky360_tracking/: CMakeLists.txt
src/sky360_tracking/src/: track_provider.cpp  tracker.hpp  video_tracker.hpp
src/sky360_visualizers/: CMakeLists.txt  package.xml
src/sky360_visualizers/src/: annotated_frame_creator.hpp  annotated_frame_provider.cpp  frame_bbox_viewer.cpp  frame_viewer.cpp
